--- a/work.html
+++ b/work.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>My Work Experience</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css">
-  <link rel="stylesheet" href="scss/main.css" type="text/css">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+      integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="//fonts.googleapis.com/css?family=font1|font2|etc"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="scss/main.css" type="text/css" />
   </head>
-  
+
   <body>
     <header>
       <div class="menu-btn">
@@ -22,58 +31,95 @@
         <div class="menu-branding">
           <div class="portrait"></div>
         </div>
-          <ul class="menu-nav">
-            <li class="nav-item">
-              <a href="index.html" class="nav-link">Home</a></li>
-            <li class="nav-item">
-                <a href="about.html" class="nav-link">About</a></li>
-            <li class="nav-item">
-                <a href="work.html" class="nav-link current">My Work</a></li>
-            <li class="nav-item">
-                <a href="contact.html" class="nav-link">Contact Me</a></li>
-          
-          </ul>
+        <ul class="menu-nav">
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="about.html" class="nav-link">About</a>
+          </li>
+          <li class="nav-item">
+            <a href="work.html" class="nav-link current">My Work</a>
+          </li>
+          <li class="nav-item">
+            <a href="contact.html" class="nav-link">Contact Me</a>
+          </li>
+        </ul>
       </nav>
     </header>
 
     <main id="work">
-     
-      <h1 class="lg-heading"> My <span class="text-secondary"> Work</span></h1>
+      <h1 class="lg-heading">My <span class="text-secondary"> Work</span></h1>
       <h2 class="sm-heading">Check out some of the projects I have done!</h2>
 
       <div class="projects">
+        <div class="item">
+          <a href="https://belleauwoodnews.com/" target="_blank">
+            <img src="img/projects/bwna_site.png" alt="Project"
+          /></a>
 
-          <div class="item">
-            <a href="https://work-app-7e8c4.firebaseapp.com/" target="_blank">
-              <img src="img/projects/work-app.png" alt="Project">
-                   <a href="https://work-app-7e8c4.firebaseapp.com/" target="_blank" class="btn-light">
-                    <i class="fas fa-eye"></i> Project
-                  </a>
-                  <a href="https://github.com/amosda4183/work-tracker-application" target="_blank" class="btn-dark">
-                  <i class="fab fa-github"></i> Github
-                </a>
+          <a
+            href="https://belleauwoodnews.com/"
+            target="_blank"
+            class="btn-light"
+          >
+            <i class="fas fa-eye"></i> Project
+          </a>
+        </div>
+
+        <div class="item">
+          <a href="https://work-app-7e8c4.firebaseapp.com/" target="_blank">
+            <img src="img/projects/work-app.png" alt="Project" />
+            <a
+              href="https://work-app-7e8c4.firebaseapp.com/"
+              target="_blank"
+              class="btn-light"
+            >
+              <i class="fas fa-eye"></i> Project
             </a>
-          </div>
+            <a
+              href="https://github.com/amosda4183/work-tracker-application"
+              target="_blank"
+              class="btn-dark"
+            >
+              <i class="fab fa-github"></i> Github
+            </a>
+          </a>
+        </div>
 
-          <div class="item">
-              <a href="https://github.com/amosda4183/LexMovieSearch"target="_blank">
-                <img src="img/projects/LexMovieSearch-Home.jpg" alt="Project">
-                    <a href="https://github.com/amosda4183/LexMovieSearch" target="_blank" class="btn-dark">
-                    <i class="fab fa-github"></i> Github
-                  </a>
-              </a>
-            </div>
+        <div class="item">
+          <a
+            href="https://github.com/amosda4183/LexMovieSearch"
+            target="_blank"
+          >
+            <img src="img/projects/LexMovieSearch-Home.jpg" alt="Project" />
+            <a
+              href="https://github.com/amosda4183/LexMovieSearch"
+              target="_blank"
+              class="btn-dark"
+            >
+              <i class="fab fa-github"></i> Github
+            </a>
+          </a>
+        </div>
 
-            <div class="item">
-                <a href="https://github.com/amosda4183/BaseballTickets"target="_blank">
-                  <img src="img/projects/home-screen.jpg" alt="Project">
-                      <a href="https://github.com/amosda4183/BaseballTickets" target="_blank" class="btn-dark">
-                      <i class="fab fa-github"></i> Github
-                    </a>
-                </a>
-              </div>
+        <div class="item">
+          <a
+            href="https://github.com/amosda4183/BaseballTickets"
+            target="_blank"
+          >
+            <img src="img/projects/home-screen.jpg" alt="Project" />
+            <a
+              href="https://github.com/amosda4183/BaseballTickets"
+              target="_blank"
+              class="btn-dark"
+            >
+              <i class="fab fa-github"></i> Github
+            </a>
+          </a>
+        </div>
 
-             <!-- template 
+        <!-- template 
                 <div class="item">
                   <a href="#!" target="_blank">
                     <img src="img/projects/project1.jpg" alt="Project">
@@ -92,6 +138,6 @@
       &copy;2018 - David Amos Web Development
     </footer>
 
-  <script src="js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
